src/test/ui/str/str-mut-idx.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/str-mut-idx.rs:4:15
   |
LL |     s[1..2] = bot();
   |               ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
note: required by `bot`
  --> $DIR/str-mut-idx.rs:1:1
   |
LL | fn bot<T>() -> T { loop {} }
   | ^^^^^^^^^^^^^^^^

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/str-mut-idx.rs:4:5
   |
LL |     s[1..2] = bot();
   |     ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: the left-hand-side of an assignment must have a statically known size

error[E0277]: the type `str` cannot be mutably indexed by `usize`
  --> $DIR/str-mut-idx.rs:7:5
   |
LL |     s[1usize] = bot();
   |     ^^^^^^^^^ `str` cannot be mutably indexed by `usize`
   |
   = help: the trait `std::ops::IndexMut<usize>` is not implemented for `str`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
